--- a/frontend/style-guide/index.html
+++ b/frontend/style-guide/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memoriae Style Guide Showcase</title>
-  <link rel="stylesheet" href="../src/styles/theme.css">
+  <link rel="stylesheet" href="../../mother-theme/src/styles/theme.css">
   <link rel="stylesheet" href="index.css">
   <!-- Lucide Icons - same library used in React components (lucide-react) -->
   <script src="https://unpkg.com/lucide@latest"></script>
